Добавлен программный I2C в AT89S52, заготовка интеллектуального энкодера, большой шрифт как опция. И оно все ещё не работает...

--- a/firmware/at89/Makefile
+++ b/firmware/at89/Makefile
@@ -74,7 +74,10 @@ flash: $(PROJECT).hex
 	$(AVRDUDE) -c pinboard_invert -p 8052 -C ~/avrdude.conf -V -e -U flash:w:$(PROJECT).hex
 #	$(AVRDUDE) -c avrftdi -p 8052 -C ~/avrdude.conf -V -e -U flash:w:$(PROJECT).hex
 
-# ------------------ Tags ---------------------#
+# ------------------ Reset --------------------#
+reset:
+	$(AVRDUDE) -c pinboard_invert -p 8052 -C ~/avrdude.conf
+
 ETAGS?=etags
 .PHONY: TAGS tags
 TAGS:
